--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.86"
 lazy_static = "1.5.0"
+nix = { version = "0.29.0", features = ["time"] }
 
 [dev-dependencies]
 proptest = "1.5.0"
