--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,10 +3,14 @@ name = "risc-sim"
 version = "0.1.0"
 edition = "2021"
 
+# [profile.release]
+# debug = true
+
 [dependencies]
 anyhow = "1.0.86"
 lazy_static = "1.5.0"
 nix = { version = "0.29.0", features = ["time"] }
+rustc-hash = "2.0.0"
 
 [dev-dependencies]
 proptest = "1.5.0"
