WIP memory u8 to u32 rework

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,8 @@ name = "risc-sim"
 version = "0.1.0"
 edition = "2021"
 
-# [profile.release]
-# debug = true
+[profile.release]
+debug = true
 
 [dependencies]
 anyhow = "1.0.86"
