--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [profile.release]
-debug = true
+codegen-units = 1
+lto = "fat"
 
 [dependencies]
 anyhow = "1.0.86"
