--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,8 @@ rustc-hash = "2.0.0"
 
 [dev-dependencies]
 proptest = "1.5.0"
+criterion = { version = "0.5", features = ["html_reports"] }
+
+[[bench]]
+name = "benchmarks"
+harness = false
