--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ lto = "fat"
 
 [dependencies]
 anyhow = "1.0.86"
+bitflags = "2.6.0"
 lazy_static = "1.5.0"
 nix = { version = "0.29.0", features = ["time"] }
 rustc-hash = "2.0.0"
