--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,6 @@ criterion = { version = "0.5", features = ["html_reports"] }
 [[bench]]
 name = "benchmarks"
 harness = false
+
+[features]
+maxperf = []
