--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Ignore all binary files
+*
+!*.*
+!*/
+
 /target
 proptest-regressions
 .vscode
@@ -6,3 +11,4 @@ notes
 flamegraph.svg
 perf.data*
 *.wad
+profile.json
