--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,11 @@ criterion = { version = "0.5", features = ["html_reports"] }
 name = "benchmarks"
 harness = false
 
+[[bench]]
+name = "doom"
+harness = false
+required-features = ["maxperf"]
+
 [features]
 default = ["maxperf"]
 maxperf = []
