--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ lto = "fat"
 
 [dependencies]
 anyhow = "1.0.86"
+array-init = "2.1.0"
 bitflags = "2.6.0"
 lazy_static = "1.5.0"
 minifb = "0.27.0"
