Removed cache for page_storage

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,6 @@ required-features = ["maxperf"]
 
 
 [features]
-default = ["maxperf"]
+default = ["maxperf", "memcache"]
 maxperf = []
 memcache = []
