Working 64bit implementation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,5 @@ required-features = ["maxperf"]
 
 
 [features]
-default = ["maxperf", "memcache"]
+default = ["maxperf"]
 maxperf = []
-memcache = []
