--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,11 +13,11 @@ anyhow = "1.0.86"
 array-init = "2.1.0"
 bitfield = "0.17.0"
 bitflags = "2.6.0"
-ctrlc = "3.4.5"
 lazy_static = "1.5.0"
 minifb = "0.27.0"
 nix = { version = "0.29.0", features = ["time"] }
 rustc-hash = "2.0.0"
+termios = "0.3.3"
 
 [dev-dependencies]
 proptest = "1.5.0"
