--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ clap = { version = "4.5.24", features = ["derive"] }
 lazy_static = "1.5.0"
 minifb = "0.27.0"
 nix = { version = "0.29.0", features = ["time"] }
+once_cell = "1.20.2"
 rustc-hash = "2.0.0"
 termios = "0.3.3"
 
